coloquei uma nova imagem

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 </a>
             </div>
         </div><!--interface-->
+
+        <img src="./images/png/logo zef.png">
     </header>
 
     <!--sdfghjklçlkjhgfgghjklçlosdcfvgtbyhnujmik,fsahfdshagkhsdghsakl-->
